Fix overflow style to show scrollbars only when overflow is real.

--- a/src/main/stylus/_media-library.styl
+++ b/src/main/stylus/_media-library.styl
@@ -4,6 +4,7 @@
   display flex
   flex-grow 1
   padding 3px
+  overflow-y auto
 
   .folder > .name, .track
     cursor pointer
