--- a/src/main/stylus/_playlist.styl
+++ b/src/main/stylus/_playlist.styl
@@ -3,7 +3,7 @@
 .playlist
   height 100%
   padding 3px
-  overflow-y scroll
+  overflow-y auto
 
   .tracks
     width 100%
